added traits+color (almost finish)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -68,3 +68,21 @@
     color: red;
     padding : 10px;
 }
+
+.chromatic
+{
+    background-color:purple;
+}
+
+.silver
+{
+    background-color: silver;
+}
+.gold
+{
+    background-color:gold;
+}
+
+.bronze{
+    background-color:chocolate;
+}
