--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,7 +50,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width : 50%;
+    width : 30%;
 }
 
 .info {
@@ -84,5 +84,53 @@
 }
 
 .bronze{
-    background-color:chocolate;
+     background-color: chocolate;
 }
+
+.hexagon img
+{
+    width:30px;
+}
+
+.hexagon {
+  
+}
+
+.traitsContainer
+{
+    display:flex;
+    padding:20px;
+}
+
+.traitsContainer div
+{
+    margin:1px;
+}
+/* 
+.hexagon {
+  position: relative;
+  width: 40px; 
+  height: 23.09px;
+  background-color: #64c7cc;
+  margin: 11.55px 0;
+}
+
+.hexagon:before,
+.hexagon:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+}
+
+.hexagon:before {
+  bottom: 100%;
+  border-bottom: 11.55px solid #64c7cc;
+}
+
+.hexagon:after {
+  top: 100%;
+  width: 0;
+  border-top: 11.55px solid #64c7cc;
+} */
